--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -48,4 +48,5 @@
 .btnAddContact:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 5px;
     color: antiquewhite;
+    transition: all 0.5s ease-in-out;
 }
